--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "watch": "tsc -w",
     "compodoc": "npx compodoc -p ./tsconfig.doc.json"
   },
@@ -24,6 +24,8 @@
     "rxjs": "^6.4.0"
   },
   "devDependencies": {
-    "@compodoc/compodoc": "^1.1.8"
+    "@compodoc/compodoc": "^1.1.8",
+    "chai": "^4.2.0",
+    "mocha": "^5.2.0"
   }
 }
