--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "test": "mocha",
     "watch": "tsc -w",
-    "compodoc": "npx compodoc -p ./tsconfig.doc.json"
+    "compodoc": "npx compodoc -p ./tsconfig.doc.json",
+    "cover": "istanbul cover node_modules/mocha/bin/_mocha test/*.js -- -R spec"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,8 @@
   "devDependencies": {
     "@compodoc/compodoc": "^1.1.8",
     "chai": "^4.2.0",
+    "coveralls": "^3.0.2",
+    "istanbul": "^0.4.5",
     "mocha": "^5.2.0"
   }
 }
